--- a/src/views/partials/plans.pug
+++ b/src/views/partials/plans.pug
@@ -6,47 +6,51 @@
     p Functionality of Kalami will always be free. Premium offers +50 additional Assistive Card packs
     form
       ul.mdl-list
-        li.mdl-list__item.mdl-list__item--two-line.plans-container__plan.mdl-color--cyan-50
-          span.mdl-list__item-primary-content
-            span Monthly
-            .mdl-list__item-text-body 3 days FREE Trail
-          span.mdl-list__item-secondary-content
-            span.mdl-list__item-secondary-info EGP 100/Month
-            span.mdl-list__item-secondary-action
-              label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-1')
+        label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect.plans-container__plan(for='list-option-1')
+          li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50
+            span.mdl-list__item-primary-content
+              span Monthly
+              .mdl-list__item-text-body 3 days FREE Trail
+            span.mdl-list__item-secondary-content
+              span.mdl-list__item-secondary-info EGP 100/Month
+              span.mdl-list__item-secondary-action
+                
                 input#list-option-1.mdl-radio__button(type='radio' name='options' value='1')
 
 
-        li.mdl-list__item.mdl-list__item--two-line.plans-container__plan.mdl-color--cyan-50
-          span.mdl-list__item-primary-content
-            span Six Months
-            .mdl-list__item-text-body 3 days FREE Trail
-          span.mdl-list__item-secondary-content
-            span.mdl-list__item-secondary-info EGP 500/6 Month
-            span.mdl-list__item-secondary-action
-              label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-2')
+        label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect.plans-container__plan(for='list-option-2')
+          li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50
+            span.mdl-list__item-primary-content
+              span Six Months
+              .mdl-list__item-text-body 3 days FREE Trail
+            span.mdl-list__item-secondary-content
+              span.mdl-list__item-secondary-info EGP 500/6 Month
+              span.mdl-list__item-secondary-action
+                
                 input#list-option-2.mdl-radio__button(type='radio' name='options' value='2' checked='checked')
 
-        li.mdl-list__item.mdl-list__item--two-line.plans-container__plan.mdl-color--cyan-50
-          span.mdl-list__item-primary-content
-            span Yearly
-            .mdl-list__item-text-body 3 days FREE Trail
-          span.mdl-list__item-secondary-content
-            span.mdl-list__item-secondary-info EGP 1000/Year
-            span.mdl-list__item-secondary-action
-              label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-3')
+        label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect.plans-container__plan(for='list-option-3')
+          li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50
+            span.mdl-list__item-primary-content
+              span Yearly
+              .mdl-list__item-text-body 3 days FREE Trail
+            span.mdl-list__item-secondary-content
+              span.mdl-list__item-secondary-info EGP 1000/Year
+              span.mdl-list__item-secondary-action
+                
                 input#list-option-3.mdl-radio__button(type='radio' name='options' value='3')
 
 
 
-        li.mdl-list__item.mdl-list__item--two-line.plans-container__plan.mdl-color--cyan-50
-          span.mdl-list__item-primary-content
-            span Lifetime
-            .mdl-list__item-text-body One-time Payment
-          span.mdl-list__item-secondary-content
-            span.mdl-list__item-secondary-info EGP 2500
-            span.mdl-list__item-secondary-action
-              label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect(for='list-option-4')
+        label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect.plans-container__plan(for='list-option-4')
+          li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50
+            span.mdl-list__item-primary-content
+              span Lifetime
+              .mdl-list__item-text-body One-time Payment
+            span.mdl-list__item-secondary-content
+              span.mdl-list__item-secondary-info EGP 2500
+              span.mdl-list__item-secondary-action
+                
                 input#list-option-4.mdl-radio__button(type='radio' name='options' value='4')
 
 
