--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,10 +22,10 @@ body {
   transition: left 0.2s;
 }
 
-.page-content {
-  margin-left: 240px;
-  position: relative;
-}
+// .page-content {
+//   margin-left: 240px;
+//   position: relative;
+// }
 
 
 .search-bar {
