--- a/src/views/partials/plans.pug
+++ b/src/views/partials/plans.pug
@@ -1,59 +1,69 @@
 .mdl-card.mdl-shadow--2dp.plans-container.mdl-card--unset-width
-  .mdl-card__title.mdl-card--expand
+	.mdl-card__title.mdl-card--expand
 
-  .mdl-card__supporting-text
-    h5 Unlock Kalami Premium
-    p Functionality of Kalami will always be free. Premium offers +50 additional Assistive Card packs
-    form
-      ul.mdl-list
-        label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect.plans-container__plan(for='list-option-1')
-          li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50
-            span.mdl-list__item-primary-content
-              span Monthly
-              .mdl-list__item-text-body 3 days FREE Trail
-            span.mdl-list__item-secondary-content
-              span.mdl-list__item-secondary-info EGP 100/Month
-              span.mdl-list__item-secondary-action
-                
-                input#list-option-1.mdl-radio__button(type='radio' name='options' value='1')
+	.mdl-card__supporting-text
+		form
+			ul.mdl-list
+					li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50.plans-item
+						label.plans-container__plan(for='list-option-3')
+						span.mdl-list__item-primary-content
+							span Monthly
+							.mdl-list__item-text-body 3 days FREE Trail
+						span.mdl-list__item-secondary-content
+							span.mdl-list__item-secondary-info EGP 100/Month
+							span.mdl-list__item-secondary-action
+								
+								input#list-option-1.mdl-radio__button(type='radio' name='options' value='1')
 
 
-        label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect.plans-container__plan(for='list-option-2')
-          li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50
-            span.mdl-list__item-primary-content
-              span Six Months
-              .mdl-list__item-text-body 3 days FREE Trail
-            span.mdl-list__item-secondary-content
-              span.mdl-list__item-secondary-info EGP 500/6 Month
-              span.mdl-list__item-secondary-action
-                
-                input#list-option-2.mdl-radio__button(type='radio' name='options' value='2' checked='checked')
+					li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50.plans-item
+						label.plans-container__plan(for='list-option-3')
+						span.mdl-list__item-primary-content
+							span Six Months
+							.mdl-list__item-text-body 3 days FREE Trail
+						span.mdl-list__item-secondary-content
+							span.mdl-list__item-secondary-info EGP 500/6 Month
+							span.mdl-list__item-secondary-action
+								
+								input#list-option-2.mdl-radio__button(type='radio' name='options' value='2' checked='checked')
 
-        label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect.plans-container__plan(for='list-option-3')
-          li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50
-            span.mdl-list__item-primary-content
-              span Yearly
-              .mdl-list__item-text-body 3 days FREE Trail
-            span.mdl-list__item-secondary-content
-              span.mdl-list__item-secondary-info EGP 1000/Year
-              span.mdl-list__item-secondary-action
-                
-                input#list-option-3.mdl-radio__button(type='radio' name='options' value='3')
-
-
-
-        label.demo-list-radio.mdl-radio.mdl-js-radio.mdl-js-ripple-effect.plans-container__plan(for='list-option-4')
-          li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50
-            span.mdl-list__item-primary-content
-              span Lifetime
-              .mdl-list__item-text-body One-time Payment
-            span.mdl-list__item-secondary-content
-              span.mdl-list__item-secondary-info EGP 2500
-              span.mdl-list__item-secondary-action
-                
-                input#list-option-4.mdl-radio__button(type='radio' name='options' value='4')
+				
+					li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50.plans-item
+						label.plans-container__plan(for='list-option-3')
+						span.mdl-list__item-primary-content
+							span Yearly
+							.mdl-list__item-text-body 3 days FREE Trail
+						span.mdl-list__item-secondary-content
+							span.mdl-list__item-secondary-info EGP 1000/Year
+							span.mdl-list__item-secondary-action
+								
+								input#list-option-3.mdl-radio__button(type='radio' name='options' value='3')
 
 
-      button.mdl-button.mdl-button--primary.mdl-js-button.mdl-js-ripple-effect.mdl-button--raised.mdl-button--colored.plans-container__submit
-        | Subscribe to the Selected Plan
-      p.mdl-typography--body-1.mdl-typography--font-bold.mdl-typography--text-center.mdl-color-text--red-A700 Cancel any time without cost
+
+					li.mdl-list__item.mdl-list__item--three-line.mdl-color--cyan-50.plans-item
+						label.plans-container__plan(for='list-option-4')
+						span.mdl-list__item-primary-content
+							span Lifetime
+							.mdl-list__item-text-body One-time Payment
+						span.mdl-list__item-secondary-content
+							span.mdl-list__item-secondary-info EGP 2500
+							span.mdl-list__item-secondary-action
+				
+								input#list-option-4.mdl-radio__button(type='radio' name='options' value='4')
+
+
+			button.mdl-button.mdl-button--primary.mdl-js-button.mdl-js-ripple-effect.mdl-button--raised.mdl-button--colored.plans-container__submit
+				| Subscribe to the Selected Plan
+			p.mdl-typography--body-1.mdl-typography--font-bold.mdl-typography--text-center.mdl-color-text--red-A700 Cancel any time without cost
+
+		//- card
+		#allPlanCards 
+			a(href='#' class="plan-card")
+				img(src='~images/girl.png' alt='image' class="plan-card__image")
+				.plan-card__title.mdl-typography--font-bold Toys
+				.plan-card__cards 24 cards
+				.plan-card__phrases 72 phrases
+		h5 Unlock Kalami Premium
+		p Functionality of Kalami will always be free. Premium offers +50 additional Assistive Card packs
+		
