--- a/src/styles/components/_pack-card.scss
+++ b/src/styles/components/_pack-card.scss
@@ -1,7 +1,6 @@
 .pack-card {
   border-radius: 18px;
   background-color: currentColor;
-  // margin: 20px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -28,38 +27,31 @@
     transition: opacity .2s cubic-bezier(.4, 0, .6, 1);
   }
 
-  &:hover, &:active {
-    // border: 1px solid currentColor;
-
+  &:hover,
+  &:active {
     &:before {
       opacity: 0.24;
-      // border: 1px solid currentColor; box shadow
     }
-
-    //
   }
 
   &:active {
     transform: scale(0.9);
   }
+
+  .pack-card__image {
+    width: 50%;
+    height: 50%;
+    margin-bottom: 8px;
+  }
+
+  .pack-card__title {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0;
+    filter: invert(60%);
+  }
 }
 
 #allCards {
   background-color: #fff;
-}
-
-.pack-card__image {
-  width: 50%;
-  height: 50%;
-  // border-radius: 50%;
-  margin-bottom: 8px;
-}
-
-.pack-card__title {
-  font-weight: 400;
-  font-size: 14px;
-  margin: 0;
-  // color: invert;
-  filter: invert(60%);
-
 }
