edit plan card classes

--- a/src/views/partials/plans.pug
+++ b/src/views/partials/plans.pug
@@ -48,11 +48,11 @@
 			p.mdl-typography--body-1.mdl-typography--font-bold.mdl-typography--text-center.mdl-color-text--red-A700 Cancel any time without cost
 
 		#allPlanCards 
-			a(href='#' class="plan-card")
-				img(src='~images/girl.png' alt='image' class="plan-card__image")
-				.plan-card__title.mdl-typography--font-bold Toys
-				.plan-card__cards 24 cards
-				.plan-card__phrases 72 phrases
+			a(href='#' class="pack-card plan-card")
+				img(src='~images/girl.png' alt='image' class="pack-card__image")
+				.pack-card__title.mdl-typography--font-bold Toys
+				.pack-card__title 24 cards
+				.pack-card__title 72 phrases
 		h5 Unlock Kalami Premium
 		p Functionality of Kalami will always be free. Premium offers +50 additional Assistive Card packs
 		
