--- a/src/views/auth.pug
+++ b/src/views/auth.pug
@@ -2,7 +2,7 @@ extends layouts/main
 
 block layout
   .mdl-layout.mdl-js-layout
-    section.container
+    section.auth-container
       #cube.show-front
         include partials/login
 
