--- a/src/views/partials/login.pug
+++ b/src/views/partials/login.pug
@@ -16,7 +16,7 @@ figure.front
             | Login
         .mdl-grid
           .mdl-cell.mdl-cell--12-col
-            a.mdl-color-text--primary(onclick='flip("show-left")') Sign up!
-            a.mdl-color-text--primary(onclick='flip("show-bottom")' style='float: right')
+            a.mdl-color-text--primary(onclick='flip("show-left")' style='cursor: pointer') Sign up!
+            a.mdl-color-text--primary(onclick='flip("show-bottom")' style='float: right ; cursor: pointer ')
               | Lost
               | Password?
