1- about page 2- feedback page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,8 @@
 @import 'components/right-sidebar';
 @import 'components/left-sidebar';
 @import 'senctence';
+@import 'components/image';
+@import 'components/article';
 
 @import "auth";
 
