--- a/src/styles/_auth.scss
+++ b/src/styles/_auth.scss
@@ -1,11 +1,11 @@
 .auth-container {
-   position: absolute;
-   left: 50%;
-   top: 40px;
-   transform: translate(-50%, 0);
-   perspective: 1000px;
-   width: 330px;
-   height: 375px;
+    position: absolute;
+    left: 50%;
+    top: 40px;
+    transform: translate(-50%, 0);
+    perspective: 1000px;
+    width: 330px;
+    height: 375px;
 }
 
 #cube {
@@ -54,4 +54,30 @@
 
 #cube {
     transition: transform .4s;
+}
+
+
+
+.login-divider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .signupDivider {
+        width: 40%;
+        display: inline-block;
+    }
+    span{
+        margin: 0 15px;
+    }
+}
+
+.login-with{
+    text-align: center;
+    margin-bottom: 14px;
+
+    .login-icon{
+        width: 30px;
+        margin: 7px 8px;
+    }
 }
