--- a/src/styles/components/_left-sidebar.scss
+++ b/src/styles/components/_left-sidebar.scss
@@ -2,11 +2,11 @@
   min-height: 750px;
 
   img {
-    width: 60%;
+    width: 80%;
   }
 
   .kalami-logo {
-    width: 100%;
+    // width: 100%;
   }
 }
 
@@ -14,10 +14,10 @@
   display: flex;
   align-items: center;
   padding-left: 13px;
-  margin-top: 33px;
+  margin: 10px 0;
 
   .user__image {
-    width: 33%;
+    width: 25%;
     border-radius: 50%;
 
   }
@@ -28,12 +28,13 @@
     padding-left: 10px;
 
     .user__data__name {
-      font-size: 20px;
+      font-size: 18px;
       font-weight: 600;
     }
 
     .user__data__packs {
       margin-top: 3px;
+      font-size: 12px;
     }
   }
 
@@ -76,6 +77,11 @@
 .mdl-list__item {
   justify-content: center;
   cursor: pointer;
+
+  a{
+    color: #757575;
+
+  }
 }
 
 .demo-list-icon {
