--- a/src/views/partials/left-sidebar.pug
+++ b/src/views/partials/left-sidebar.pug
@@ -2,6 +2,7 @@
   a(href='/' class="mdl-layout-title")
     img(src='~images/apple-store.png' alt='apple store' class="kalami-logo")
 
+  .mdl-menu__item--full-bleed-divider
   //- user
   .user
     img(src='~images/girl.png' alt='your image' class='user__image')
@@ -9,28 +10,36 @@
       .user__data__name  name 
       .user__data__packs  9 packs
 
-    //- Navigation
-  nav.mdl-navigation.mdl-list
-    a(class="mdl-navigation__link" href="account.html")
-      i.material-icons.mdl-list__item-icon account_circle
-      |  Account
-    a(class="mdl-navigation__link" href="subscriptions.html")
-      i.material-icons.mdl-list__item-icon subscriptions
-      |  Subscriptions
+  .mdl-menu__item--full-bleed-divider
 
-    //- .mdl-menu__item--full-bleed-divider
-    a(class="mdl-navigation__link" href="feedback.html")
-      i.material-icons.mdl-list__item-icon send
-      |  feedback
-    a(class="mdl-navigation__link" href="about.html")
-      i.material-icons.mdl-list__item-icon info
-      |  About
+
+
+  ul.demo-list-icon.mdl-list
+    li.mdl-list__item
+      a(class="mdl-list__item-primary-content" href="account.html")
+        i.material-icons.mdl-list__item-icon account_circle
+        |  Account
+    li.mdl-list__item
+      a(class="mdl-list__item-primary-content" href="subscriptions.html")
+        i.material-icons.mdl-list__item-icon subscriptions
+        |  Subscriptions
+    li.mdl-list__item
+      a(class="mdl-list__item-primary-content" href="feedback.html")
+        i.material-icons.mdl-list__item-icon send
+        |  feedback
+    li.mdl-list__item
+      a(class="mdl-list__item-primary-content" href="about.html")
+        i.material-icons.mdl-list__item-icon info
+        |  About
 
     .mdl-menu__item--full-bleed-divider
-    a(class="mdl-navigation__link" href="#")
-      i.material-icons.mdl-list__item-icon logout
-      | Logout
 
+    li.mdl-list__item
+      a(class="mdl-list__item-primary-content" href="#")
+        i.material-icons.mdl-list__item-icon logout
+        | Logout
+
+    
 
 
     .sidebar-footer 
