--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,3 +2,60 @@ extends layouts/app
 
 block content 
 
+  //- section#section-wipes.demo
+  //- style(type='text/css').
+  //-   #pinContainer {
+  //-   width: 100%;
+  //-   height: 100%;
+  //-   overflow: hidden;
+  //-   }
+  //-   .panel {
+  //-   height: 100%;
+  //-   width: 100%;
+  //-   position: absolute;
+  //-   }
+  //- #pinContainer
+  //-   section.panel.blue
+  //-     b ONE
+  //-   section.panel.turqoise
+  //-     b TWO
+  //-   section.panel.green
+  //-     b THREE
+  include ./components/plan-card.pug
+  .pricing-table
+    .pricing-header
+      i.icon-paper-plane
+      h4 Basic
+      .gd
+        span.hm $
+        span.dollars 9
+        span.ic 99
+    ul.pricing-features
+      li.pricing-feature
+        i.icon-accept
+        | 10 product uses.
+      li.pricing-feature
+        i.icon-accept
+        | 10 product uses.
+      li.pricing-feature
+        i.icon-accept
+        | 10 product uses.
+      li.pricing-feature.au
+        i.icon-close
+        | Pro and above.
+      li.pricing-feature.au
+        i.icon-close
+        | Enterprise only.
+      li.pricing-feature.au
+        i.icon-close
+        | Enterprise only.
+      li.pricing-feature.au
+        i.icon-close
+        | Enterprise only.
+
+
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js')
+  
