remove blur in auth template

--- a/src/styles/_auth.scss
+++ b/src/styles/_auth.scss
@@ -25,31 +25,31 @@
 }
 
 #cube .front {
-    transform: rotateY(0deg) translateZ(187.5px);
+    // transform: rotateY(0deg) translateZ(187.5px);
 }
 
 #cube .left {
-    transform: rotateY(-90deg) translateZ(165px) translateX(22.5px);
+    transform: rotateY(-90deg) translateZ(0px) ;
 }
 
 #cube .bottom {
-    transform: rotateX(-90deg) translateZ(187.5px);
+    transform: rotateX(-90deg) translateZ(0px);
 }
 
 #cube {
-    transform: translateZ(-165px);
+    // transform: translateZ(-165px);
 }
 
 #cube.show-front {
-    transform: translateZ(-165px) rotateY(0deg);
+    // transform: translateZ(-165px) rotateY(0deg);
 }
 
 #cube.show-left {
-    transform: translateX(-22.5px) translateZ(-165px) rotateY(90deg);
+    transform: translateX(0px) translateZ(0px) rotateY(90deg);
 }
 
 #cube.show-bottom {
-    transform: translateZ(-165px) rotateX(90deg);
+    transform: rotateX(90deg);
 }
 
 #cube {
