1- edits on about page 2- working on home page

--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -13,8 +13,8 @@ html(lang="en" dir="ltr")
 
   body
     block layout
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js')
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js')
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js')
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js')
+    //- script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js')
     
