--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -12,7 +12,102 @@
 
   &.plan-card{
     border: 2px solid #3F51B5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    margin: 0 auto;
+    overflow: visible;
+    padding: 20px;
+    align-self: center;
+    h4,h5{
+      margin-top: 0;
+    }
+    .plan-card__icon{
+      position: absolute;
+      left: 50%;
+      top: 0;
+      transform: translate(-50%, -60%) rotate(-45deg);
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
+      border-radius: 50%;
+      background-color: #fff;
+      text-align: center;
+      color: #3F51B5;
+    }
+    .mdl-chip__contact{
+      span{
+        font-size: 20px;
+        line-height: 33px;
+      }
+    }
   }
 
+  &.feature-card{
+    margin: 0 auto 50px auto;
+    .feature-card__icon{
+      color: #3F51B5;
+      font-size: 40px;
+      padding: 16px 16px 0 16px;
+    }
+  }
 
 }
+
+.demo#section-wipes{
+  height: calc(100vh - 60px) !important;
+  width: 100%;
+  .scrollmagic-pin-spacer{
+    height: 100vh !important;
+  }
+  // overflow: hidden !important;
+}
+#pinContainer {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.panel {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  &.blue{
+    background-color: #3F51B5;
+  }
+  &.turqoise{
+    background-color: aqua;
+  }
+  &.green{
+    background-color: greenyellow;
+  }
+}
+// #pinContainer {
+//   width: 100%;
+//   height: 100vh !important;
+//   // overflow: hidden !important;
+//   position: relative;
+//   margin: auto;
+//   inset: 0px auto auto 0px;
+//   box-sizing: border-box;
+//   // width: 100%;
+//   // height: 100%;
+//   }
+//   .panel {
+//     height: 100vh !important;
+//     width: 100%;
+//     position: absolute;
+//     color: #000;
+//     font-size: 50px;
+
+//     &.blue{
+//       background-color: #3F51B5;
+//     }
+//     &.turqoise{
+//       background-color: aqua;
+//     }
+//     &.green{
+//       background-color: greenyellow;
+//     }
+    
+//   }
