--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,61 +1,76 @@
 extends layouts/app
 
-block content 
+block content
 
-  //- section#section-wipes.demo
-  //- style(type='text/css').
-  //-   #pinContainer {
-  //-   width: 100%;
-  //-   height: 100%;
-  //-   overflow: hidden;
-  //-   }
-  //-   .panel {
-  //-   height: 100%;
-  //-   width: 100%;
-  //-   position: absolute;
-  //-   }
-  //- #pinContainer
-  //-   section.panel.blue
-  //-     b ONE
-  //-   section.panel.turqoise
-  //-     b TWO
-  //-   section.panel.green
-  //-     b THREE
-  include ./components/plan-card.pug
-  .pricing-table
-    .pricing-header
-      i.icon-paper-plane
-      h4 Basic
-      .gd
-        span.hm $
-        span.dollars 9
-        span.ic 99
-    ul.pricing-features
-      li.pricing-feature
-        i.icon-accept
-        | 10 product uses.
-      li.pricing-feature
-        i.icon-accept
-        | 10 product uses.
-      li.pricing-feature
-        i.icon-accept
-        | 10 product uses.
-      li.pricing-feature.au
-        i.icon-close
-        | Pro and above.
-      li.pricing-feature.au
-        i.icon-close
-        | Enterprise only.
-      li.pricing-feature.au
-        i.icon-close
-        | Enterprise only.
-      li.pricing-feature.au
-        i.icon-close
-        | Enterprise only.
+	section#section-wipes.demo
+		#pinContainer
+			section.panel.blue
+				b ONE
+			section.panel.turqoise
+				b TWO
+			section.panel.green
+				b THREE
+		.mdl-grid
+			.mdl-cell.mdl-cell--12-col
+				h3.display-3 Plans
+			.mdl-cell.mdl-cell--4-col
+				include ./components/plan-card.pug
+			.mdl-cell.mdl-cell--4-col
+				include ./components/plan-card.pug
+			.mdl-cell.mdl-cell--4-col
+				include ./components/plan-card.pug
 
+			.mdl-cell.mdl-cell--12-col
+				h3.display-3 Features
+			.mdl-cell.mdl-cell--4-col
+				include ./components/feature-card.pug
+			.mdl-cell.mdl-cell--4-col
+				include ./components/feature-card.pug
+			.mdl-cell.mdl-cell--4-col
+				include ./components/feature-card.pug
+			.mdl-cell.mdl-cell--4-col
+				include ./components/feature-card.pug
+			.mdl-cell.mdl-cell--4-col
+				include ./components/feature-card.pug
+			.mdl-cell.mdl-cell--4-col
+				include ./components/feature-card.pug
 
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js')
-  
+	//- .pricing-table
+		.pricing-header
+			i.icon-paper-plane
+			h4 Basic
+			.gd
+				span.hm $
+				span.dollars 9
+				span.ic 99
+		ul.pricing-features
+			li.pricing-feature
+				i.icon-accept
+				| 10 product uses.
+			li.pricing-feature
+				i.icon-accept
+				| 10 product uses.
+			li.pricing-feature
+				i.icon-accept
+				| 10 product uses.
+			li.pricing-feature.au
+				i.icon-close
+				| Pro and above.
+			li.pricing-feature.au
+				i.icon-close
+				| Enterprise only.
+			li.pricing-feature.au
+				i.icon-close
+				| Enterprise only.
+			li.pricing-feature.au
+				i.icon-close
+				| Enterprise only.
+
+	script(src='//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js')
+	script(src='//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js')
+	script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js')
+	script(src="//cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js") 
+	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js')
+	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js')
+	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js')
+	
