--- a/src/views/partials/left-sidebar.pug
+++ b/src/views/partials/left-sidebar.pug
@@ -49,6 +49,20 @@
       a(href='#' class="mdl-list__item sidebar-footer__download")
         img(src='~images/apple-store.png' alt='apple store')
 
+      .sidebar-footer__links 
+        a(href='#')
+          span Home 
+        a(href='#')
+          span Legal 
+        a(href='#')
+          span Terms of Use 
+        a(href='#')
+          span Privacy 
+        a(href='#')
+          span Policy 
+        a(href='#')
+          span Licenses
+
       .mdl-list__item.copy-right
         p
           | &copy; 2022 
