--- a/src/styles/components/_left-sidebar.scss
+++ b/src/styles/components/_left-sidebar.scss
@@ -1,12 +1,14 @@
 .mdl-layout__drawer {
   min-height: 750px;
+  overflow: hidden;
+  background-color: #edeeef;
 
   img {
-    width: 80%;
+    width: 50%;
   }
 
   .kalami-logo {
-    // width: 100%;
+    width: 70%;
   }
 }
 
@@ -17,7 +19,7 @@
   margin: 10px 0;
 
   .user__image {
-    width: 25%;
+    width: 20%;
     border-radius: 50%;
 
   }
@@ -28,12 +30,11 @@
     padding-left: 10px;
 
     .user__data__name {
-      font-size: 18px;
+      font-size: 17px;
       font-weight: 600;
     }
 
     .user__data__packs {
-      margin-top: 3px;
       font-size: 12px;
     }
   }
@@ -48,6 +49,18 @@
   .sidebar-footer__download {
     padding: 4px;
   }
+
+  .sidebar-footer__links{
+    padding: 0 18px;
+    margin-top: 8px;
+
+
+    a{
+      margin: 0 4px;
+      text-decoration: none;
+      color: #2c2cbb;
+    }
+  }
 }
 
 .copy-right {
@@ -56,6 +69,7 @@
   justify-content: center;
   list-style: none;
   padding: 0px;
+  margin-top: -10px;
 
   a {
     text-decoration: none;
