--- a/src/views/partials/plans.pug
+++ b/src/views/partials/plans.pug
@@ -7,9 +7,9 @@
 			#allPlanCards 
 				a(href='#' class="pack-card pack-card--sm")
 					img(src='~images/girl.png' alt='image' class="pack-card__image")
-					.pack-card__title.mdl-typography--font-bold Toys
-					.pack-card__title 24 cards
-					.pack-card__title 72 phrases
+					.pack-card__title Toys
+					.pack-card__title.pack-card__title--sm 24 cards
+					.pack-card__title.pack-card__title--sm 72 phrases
 			h5 Unlock Kalami Premium
 			p Functionality of Kalami will always be free. Premium offers +50 additional Assistive Card packs
 		
