--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -55,29 +55,54 @@
 
 }
 
-.demo#section-wipes{
-  height: calc(100vh - 60px) !important;
-  // width: 100%;
-  // width: calc(100% - 240px) !important; 
-  .scrollmagic-pin-spacer{
-    // height: 100vh !important;
+.scroll{
+  height: calc(1000px - 60px) !important;
+  scrollbar-width: none !important;
+  overflow: hidden !important;
+  &::-webkit-scrollbar {
+    display: none !important;
   }
-  // overflow: hidden !important;
+
+}
+
+.demo#section-wipes{
+  height: auto !important;
+  .scrollmagic-pin-spacer{
+    height: 979px !important;
+  }  
 }
 #pinContainer {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  &::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+  }
 }
 .panel {
   height: 100%;
-  width: 100%;
   position: absolute;
   &.blue{
     background-color: #3F51B5;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    .mobile{
+      background: center url('https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/nexus5x.png') no-repeat;
+    }
+  }
+  &.turqoise, &.green{
+    width: 30% !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
   }
   &.turqoise{
     background-color: aqua;
+    right: 0 !important;
   }
   &.green{
     background-color: greenyellow;
