1- working on home page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import 'senctence';
 @import 'components/image';
 @import 'components/article';
+@import 'components/scrollable';
 
 @import "auth";
 
