--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -19,10 +19,15 @@ block content
 				div.mobile
 				//- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id, at ipsum, molestias dicta repellendus eligendi molestiae harum distinctio beatae cupiditate ipsam tempore quas vel veniam. Perspiciatis tempore amet possimus.
 			section.panel.turqoise
+				h1.displa-4.scrollable-title Kalamy
+				p.display-2 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae obcaecati fuga hic velit reprehenderit, veniam cum iure omnis, incidunt animi quo explicabo! Ea iure ipsa laudantium. Maxime molestiae odit vero?
 
+			section.panel.purple
 				p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae obcaecati fuga hic velit reprehenderit, veniam cum iure omnis, incidunt animi quo explicabo! Ea iure ipsa laudantium. Maxime molestiae odit vero?
+
 			section.panel.green
 				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique nemo recusandae quasi natus rem atque quas placeat corrupti ea minima! Soluta veritatis dolorum vel quaerat debitis, velit at dolor. Velit.
+
 	.mdl-grid
 		.mdl-cell.mdl-cell--12-col
 			h3.display-3 Plans
