1- working on home

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -13,6 +13,8 @@ block content
 			include ./components/plan-card.pug
 		.mdl-cell.mdl-cell--4-col
 			include ./components/plan-card.pug
+	
+	#trigger
 	section#section-wipes.demo
 		#pinContainer
 			section.panel.blue
@@ -20,13 +22,20 @@ block content
 				//- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id, at ipsum, molestias dicta repellendus eligendi molestiae harum distinctio beatae cupiditate ipsam tempore quas vel veniam. Perspiciatis tempore amet possimus.
 			section.panel.turqoise
 				h1.displa-4.scrollable-title Kalamy
-				p.display-2 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae obcaecati fuga hic velit reprehenderit, veniam cum iure omnis, incidunt animi quo explicabo! Ea iure ipsa laudantium. Maxime molestiae odit vero?
+				p.display-3 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime molestiae odit vero?
 
 			section.panel.purple
-				p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae obcaecati fuga hic velit reprehenderit, veniam cum iure omnis, incidunt animi quo explicabo! Ea iure ipsa laudantium. Maxime molestiae odit vero?
+				h1.displa-4.scrollable-title Kalamy
+				p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae obcaecati fuga hic velit reprehenderit, veniam cum 
+				a(href='#' class="mdl-list__item sidebar-footer__download")
+					img(src='~images/google-play.png' alt='apple store')
 
+				a(href='#' class="mdl-list__item sidebar-footer__download")
+					img(src='~images/apple-store.png' alt='apple store')
 			section.panel.green
-				p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique nemo recusandae quasi natus rem atque quas placeat corrupti ea minima! Soluta veritatis dolorum vel quaerat debitis, velit at dolor. Velit.
+				h1.displa-4.scrollable-title Kalamy
+				p Lorem ipsum dolor sit amet, consectetur
+
 
 	.mdl-grid
 		.mdl-cell.mdl-cell--12-col
