--- a/src/styles/components/_scrollable.scss
+++ b/src/styles/components/_scrollable.scss
@@ -1,3 +1,19 @@
+.full-header{
+  // position: fixed;
+  top: 0;
+  left: 0;
+}
+.mdl-layout__content{
+  & + .page-content{
+    // margin-top: 64px;
+  }
+
+}
+#trigger{
+  width: 100%;
+  // height: 2px;
+  background: red;
+}
 .mdl-layout__container{
   & + div{
     opacity: 0;
@@ -9,6 +25,7 @@
 }
 .demo#section-wipes{
   // height: calc(1000px - 60px) !important;
+  // margin-top: 60px;
   height: auto !important;
   .scrollmagic-pin-spacer{
     height: calc(879px - 60px) !important;
@@ -46,13 +63,13 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
-    // height: 979px !important;
+    color: #3F51B5;
     top: 0 !important;
   }
   &.turqoise{
     background-color: #B3E5FC;
     right: 0 !important;
-    color: #3F51B5;
+
     text-align: center;
   }
   &.purple{
