--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -36,7 +36,11 @@ block content
 				h1.displa-4.scrollable-title Kalamy
 				p Lorem ipsum dolor sit amet, consectetur
 
-
+	//- section.hero
+	//- 	#mobile 
+	//- 	#first 
+	//- 	#second
+	//- 	#third 
 	.mdl-grid
 		.mdl-cell.mdl-cell--12-col
 			h3.display-3 Plans
@@ -97,7 +101,11 @@ block content
 	script(src='//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js')
 	script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/animation.gsap.min.js')
 	script(src="//cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js") 
+
 	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js')
+	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js')
+	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js')
+	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js')
 	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js')
-	//- script(src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenLite.min.js')
+	//- script(src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js") 
 	
