--- a/src/styles/components/_scrollable.scss
+++ b/src/styles/components/_scrollable.scss
@@ -1,5 +1,5 @@
 .full-header{
-  // position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
 }
@@ -19,7 +19,7 @@
     opacity: 0;
     & + div{
       opacity: 0;
-      height: 890px !important;
+      height: 1000px !important;
     }
   }
 }
@@ -28,7 +28,7 @@
   // margin-top: 60px;
   height: auto !important;
   .scrollmagic-pin-spacer{
-    height: calc(879px - 60px) !important;
+    height: calc(1000px - 60px) !important;
   }  
 }
 #pinContainer {
@@ -84,4 +84,37 @@
 .scrollable-title{
   font-weight: 600;
   text-transform: uppercase;
+}
+
+// new vision
+.hero{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  #first, #second, #third, #mobile{
+    width: 50vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+  }
+  div{
+    &:nth-of-type(1){
+      left: 0;
+      background: center url('https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/nexus5x.png') no-repeat;
+    }
+    &:nth-of-type(2){
+      right: 0;
+      background: mediumspringgreen;
+    }
+    &:nth-of-type(3){
+      left: 0;
+      transform: translateX(-100%);
+      background: greenyellow;
+    }
+    &:nth-of-type(4){
+      right: 0;
+      transform: translateX(100%);
+      background: burlywood;
+    }
+  }
 }
