--- a/src/views/layouts/guest.pug
+++ b/src/views/layouts/guest.pug
@@ -2,8 +2,9 @@ extends main
 
 block layout
 	//- .mdl-layout.mdl-js-layout.mdl-layout--fixed-header
-	include ../partials/full-header
-		block page-title
-		//- main.mdl-layout__content
-		//- 	.page-content
-	block content
+	.landing
+		include ../partials/full-header
+			block page-title
+			//- main.mdl-layout__content
+			//- 	.page-content
+		block content
