--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,21 +4,15 @@ block page-title
 	|Home
 
 block content
-	//- .mdl-grid
-		.mdl-cell.mdl-cell--12-col
-			h3.display-3 Plans
-		.mdl-cell.mdl-cell--4-col
-			include ./components/plan-card.pug
-		.mdl-cell.mdl-cell--4-col
-			include ./components/plan-card.pug
-		.mdl-cell.mdl-cell--4-col
-			include ./components/plan-card.pug
 	
 	#trigger
 	section#section-wipes.demo
 		#pinContainer
 			section.panel.blue
 				div.mobile
+					img(id="screen1" src="https://via.placeholder.com/150", alt="")
+					img(id="screen2" src="https://via.placeholder.com/160", alt="")
+					img(id="screen3" src="https://via.placeholder.com/170", alt="")
 				//- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id, at ipsum, molestias dicta repellendus eligendi molestiae harum distinctio beatae cupiditate ipsam tempore quas vel veniam. Perspiciatis tempore amet possimus.
 			section.panel.turqoise
 				h1.displa-4.scrollable-title Kalamy
@@ -44,26 +38,28 @@ block content
 	.mdl-grid
 		.mdl-cell.mdl-cell--12-col
 			h3.display-3 Plans
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet
 			include ./components/plan-card.pug
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet
 			include ./components/plan-card.pug
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet
+			include ./components/plan-card.pug
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet
 			include ./components/plan-card.pug
 
 		.mdl-cell.mdl-cell--12-col
 			h3.display-3 Features
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--4-col
+		.mdl-cell.mdl-cell--3-col
 			include ./components/feature-card.pug
 
 	//- .pricing-table
