--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -38,28 +38,32 @@ block content
 	.mdl-grid
 		.mdl-cell.mdl-cell--12-col
 			h3.display-3 Plans
-		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/plan-card.pug
-		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/plan-card.pug
-		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/plan-card.pug
-		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/plan-card.pug
 
 		.mdl-cell.mdl-cell--12-col
 			h3.display-3 Features
-		.mdl-cell.mdl-cell--3-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--3-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--3-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--3-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--3-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/feature-card.pug
-		.mdl-cell.mdl-cell--3-col
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
+			include ./components/feature-card.pug
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
+			include ./components/feature-card.pug
+		.mdl-cell.mdl-cell--3-col.mdl-cell--4-col-tablet.mdl-cell--12-col-phone
 			include ./components/feature-card.pug
 
 	//- .pricing-table
