--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -20,6 +20,7 @@
     overflow: visible;
     padding: 20px;
     align-self: center;
+    width: 100%;
     h4,h5{
       margin-top: 0;
     }
@@ -46,6 +47,7 @@
 
   &.feature-card{
     margin: 0 auto 50px auto;
+    width: 100%;
     .feature-card__icon{
       color: #3F51B5;
       font-size: 40px;
