--- a/src/views/components/feature-card.pug
+++ b/src/views/components/feature-card.pug
@@ -1,4 +1,4 @@
-.mdl-card.mdl-shadow--2dp.feature-card
+.feature-card
   span.material-icons.feature-card__icon send
   .mdl-card__title
     h2.mdl-card__title-text Welcome
