--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -10,48 +10,60 @@
 
   }
 
-  &.plan-card{
-    border: 2px solid #3F51B5;
+  
+
+}
+.feature-card{
+  margin: 0 auto 50px auto;
+  width: 100%;
+  .feature-card__icon{
+    color: #3F51B5;
+    font-size: 40px;
+    padding: 16px 16px 0 16px;
+  }
+}
+.plan-card{
+  border: 2px solid #3F51B5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 300px;
+  justify-content: center;
+  position: relative;
+  margin: auto auto 0 auto;
+  overflow: visible;
+  padding: 20px;
+  align-self: flex-end;
+  // width: 100%;
+  h4,h5{
+    margin-top: 0;
+  }
+  .mdl-list{
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    margin: 0 auto;
-    overflow: visible;
-    padding: 20px;
-    align-self: center;
-    width: 100%;
-    h4,h5{
-      margin-top: 0;
-    }
-    .plan-card__icon{
-      position: absolute;
-      left: 50%;
-      top: 0;
-      transform: translate(-50%, -60%) rotate(-45deg);
-      width: 50px;
-      height: 50px;
-      line-height: 50px;
-      border-radius: 50%;
-      background-color: #fff;
-      text-align: center;
-      color: #3F51B5;
-    }
-    .mdl-chip__contact{
-      span{
-        font-size: 20px;
-        line-height: 33px;
-      }
-    }
+  }
+  &.plan-card--lg{
+    // min-height: 400px;
+    border: 4px solid #3F51B5;
+    padding-top: 50px;
   }
 
-  &.feature-card{
-    margin: 0 auto 50px auto;
-    width: 100%;
-    .feature-card__icon{
-      color: #3F51B5;
-      font-size: 40px;
-      padding: 16px 16px 0 16px;
-    }
+  .plan-card__icon{
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, -50%) ;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    border-radius: 50%;
+    background-color: #fff;
+    text-align: center;
+    color: #3F51B5;
+    font-size: 30px;
+  }
+  .mdl-card__supporting-text{
+    text-align: center;
   }
 }
