--- a/src/styles/components/_scrollable.scss
+++ b/src/styles/components/_scrollable.scss
@@ -62,6 +62,9 @@
         width: 316px;
         height: 555px;
         opacity: 0;
+        &:first-of-type{
+          opacity: 1;
+        }
       }
     }
   }
@@ -97,35 +100,25 @@
   text-transform: uppercase;
 }
 
-// new vision
-.hero{
-  position: relative;
-  width: 100%;
+
+.plans, .features{
   height: 100vh;
-  #first, #second, #third, #mobile{
-    width: 50vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
+  display: flex;
+  align-items: center;
+  padding: 0 100px;
+  .mdl-grid{
+    width: 100%;
+    margin: auto 0;
+    align-items: flex-end;
+    .mdl-cell{
+      // display: flex;
+      // align-items: flex-end;
+    }
   }
-  div{
-    &:nth-of-type(1){
-      left: 0;
-      background: center url('https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/nexus5x.png') no-repeat;
-    }
-    &:nth-of-type(2){
-      right: 0;
-      background: mediumspringgreen;
-    }
-    &:nth-of-type(3){
-      left: 0;
-      transform: translateX(-100%);
-      background: greenyellow;
-    }
-    &:nth-of-type(4){
-      right: 0;
-      transform: translateX(100%);
-      background: burlywood;
-    }
+  &.features{
+    background-color: rgba($color: #3F51B5, $alpha: .1);
+  }
+  @media (max-width: 992px) {
+    padding: 0;
   }
 }
